<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="2dp"
                android:onClick="onClick"
                android:padding="7dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/iv_back"
                android:text="@string/cropDocument"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/iv_done"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="7dp"
                android:onClick="onClick"
                android:padding="7dp"
                android:src="@drawable/ic_check_mark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ly_bottom">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="vertical">



                    <me.pqpo.smartcropperlib.view.CropImageView
                        android:id="@+id/iv_preview_crop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="12dp"

                        app:civAutoScanEnable="true"
                        app:civLineColor="@color/light_txt_color"
                        app:civMagnifierCrossColor="@color/light_txt_color"
                        app:civPointColor="@color/light_txt_color"
                        app:civPointFillColor="@color/light_txt_color"
                        app:civShowEdgeMidPoint="true"
                        app:civShowGuideLine="true" />
                </FrameLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ly_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/toolbar_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iv_retake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_bg"

                        android:gravity="center"
                        android:onClick="onClick"
                        android:padding="5dp"
                        android:text="@string/retake"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/iv_Rotate_Doc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_bg"

                        android:gravity="center"
                        android:onClick="onClick"
                        android:padding="5dp"
                        android:text="@string/rotateDoc"
                        android:textColor="@color/black"
                        android:textSize="13dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
